--- a/css/custom.css
+++ b/css/custom.css
@@ -180,3 +180,14 @@
     margin-bottom: 0px;
   }
 }
+
+
+/* ------------------------------------------------------------ *\
+	footer
+\* ------------------------------------------------------------ */
+
+.footer{
+  background-color: var(--primary);
+  min-height: 6rem;
+  color: #fff;
+}
