--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,6 @@
   box-sizing: border-box;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   -ms-text-size-adjust: none;
   text-size-adjust: none;
@@ -74,6 +73,7 @@ body, html{
   line-height: 1.167;
   font-family: 'Lato', sans-serif;
   -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   min-height: calc(100vh - var(--headHei));
 }
 
